Fixing email address to gmail.

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
 author: David Sondak
-email: dsondak@seas.harvard.edu
+email: dsondak@gmail.com
 avatar: assets/imgs/david_percy.jpg
 
 # You'll want to customize url and baseurl for your own site:
